enable_language(CUDA)
find_package(CUDAToolkit REQUIRED)
find_package(absl REQUIRED)
find_package(Protobuf REQUIRED)

add_executable(tcpx_single_connection_tests tcpx_single_connection_tests.cu)
target_include_directories(tcpx_single_connection_tests PRIVATE ${CMAKE_BINARY_DIR} ${Protobuf_INCLUDE_DIRS})
target_include_directories(tcpx_single_connection_tests PRIVATE "${CMAKE_SOURCE_DIR}")
target_link_libraries(tcpx_single_connection_tests absl::absl_check absl::flags absl::flags_parse absl::log absl::str_format)
target_link_libraries(tcpx_single_connection_tests cuda_common)
target_link_libraries(tcpx_single_connection_tests gpu_rxq_configurator)
target_link_libraries(tcpx_single_connection_tests socket_helper)
target_link_libraries(tcpx_single_connection_tests tcpgpudmarxd_proto)
target_link_libraries(tcpx_single_connection_tests connection_worker)
target_link_libraries(tcpx_single_connection_tests event_handler_factory)
target_link_libraries(tcpx_single_connection_tests ${Protobuf_LIBRARIES})

add_executable(tcpx_tx_ioctl_tests tcpx_tx_ioctl_tests.cu)
target_include_directories(tcpx_tx_ioctl_tests PRIVATE ${CMAKE_BINARY_DIR} ${Protobuf_INCLUDE_DIRS})
target_include_directories(tcpx_tx_ioctl_tests PRIVATE "${CMAKE_SOURCE_DIR}")
target_link_libraries(tcpx_tx_ioctl_tests absl::absl_check absl::flags absl::flags_parse absl::log absl::str_format)
target_link_libraries(tcpx_tx_ioctl_tests cuda_common)
target_link_libraries(tcpx_tx_ioctl_tests gpu_rxq_configurator)
target_link_libraries(tcpx_tx_ioctl_tests tcpgpudmarxd_proto)
target_link_libraries(tcpx_tx_ioctl_tests ${Protobuf_LIBRARIES})

add_executable(tcpx_rx_ioctl_tests tcpx_rx_ioctl_tests.cu)
target_include_directories(tcpx_rx_ioctl_tests PRIVATE ${CMAKE_BINARY_DIR} ${Protobuf_INCLUDE_DIRS})
target_include_directories(tcpx_rx_ioctl_tests PRIVATE "${CMAKE_SOURCE_DIR}")
target_link_libraries(tcpx_rx_ioctl_tests absl::absl_check absl::flags absl::flags_parse absl::log absl::str_format)
target_link_libraries(tcpx_rx_ioctl_tests cuda_common)
target_link_libraries(tcpx_rx_ioctl_tests gpu_rxq_configurator)
target_link_libraries(tcpx_rx_ioctl_tests tcpgpudmarxd_proto)
target_link_libraries(tcpx_rx_ioctl_tests ${Protobuf_LIBRARIES})
